src/test/ui/suggestions/path-by-value.rs
use std::path::Path;

fn f(p: Path) { }
//~^ ERROR E0277

fn main() {}
